# SourcePauseTool

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  spt.vcxproj  spt.vcxproj.filters
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/workflows/: CI.yml
spt/: spt-serverplugin.cpp
spt/features/: afterframes.cpp  afterticks.cpp  aim.cpp  aim.hpp  autocomplete.cpp  camera.cpp  cvar.cpp  demo.hpp  ent_props.cpp  generic.cpp  playerio.cpp  portalled_pause.cpp  qccmd.cpp  saveloads.cpp  stucksave.cpp  tas.cpp  tracing.cpp
spt/features/game_fixes/: demo_jump_jitter.cpp  visual_fixes.cpp
spt/features/visualizations/: draw_line.cpp  map_overlay.cpp  portal_placement.cpp
spt/features/visualizations/imgui/: imgui_interface.cpp  imgui_interface.hpp  imgui_styles.hpp  spt_imgui_widgets.cpp
spt/features/visualizations/player_trace/: tr_collect.cpp  tr_imgui.cpp
spt/scripts/: srctas_reader.cpp
spt/scripts2/: srctas_reader2.cpp
spt/utils/: convar.hpp  ent_utils.cpp  ent_utils.hpp  file.cpp  game_detection.cpp  interfaces.hpp
spt/utils/custom_interfaces/: engine_client.hpp  engine_server.hpp
